@@ -1,6 +1,6 @@
 
 $(SHARED_LIBRARY): $(outdir)/config.h $(LO_FILES)
-	$(LD) $(SHARED_FLAGS) -o $@.$(VERSION) $(LO_FILES) $(LDFLAGS)
+	$(LD) $(SHARED_FLAGS) -o $@.$(VERSION) $(LO_FILES) $(ALL_LDFLAGS)
 	rm -f $@.$(MAJOR_VERSION)
 	ln -sf $(outdir)/$(LIB_PREFIX)$(NAME).so.$(VERSION) $@.$(MAJOR_VERSION)
 	rm -f $@
